--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,3 +1,3 @@
-Tool to create my link:http://archiloque.net/blog[blog] from the link:http://github.com/archiloque/blog/tree/master/brouillons/multi-tache[texts].
+Tool to create my link:http://archiloque.net/blog[blog] from the link:http://github.com/archiloque/blog[texts].
 
 Code under MIT license.
